<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".ui.cadastrar.CadastrarFragment">

    <!-- DADOS PESSOAIS -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_nome_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_cpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="@id/input_layout_nome"
        app:layout_constraintStart_toStartOf="@id/input_layout_nome"
        app:layout_constraintTop_toTopOf="@id/input_layout_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_cpf_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_data_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- ENDEREÇO -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_rua"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_rua_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_bairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_bairro_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_numero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_numero_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_cep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_cep_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_complemento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_complemento_hint"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_cidade"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="720dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_cidade"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_cidade_hint"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_estado"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="720dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_estado"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_estado_hint"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- CONTATOS -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_tel_residen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="870dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_tel_residen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_tel_residen_hint"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_tel_recado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="950dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_tel_recado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastrar_tel_recado_hint"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_celular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1030dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_celular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cadastrar_celular_hint"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- BOTÃO CADASTRAR -->

        <Button
            android:id="@+id/button_cadastro"
            android:layout_width="365dp"
            android:layout_height="59dp"
            android:layout_marginTop="124dp"
            android:text="@string/cadastrar_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/input_layout_celular"
            app:layout_constraintStart_toStartOf="@id/input_layout_celular"
            app:layout_constraintTop_toTopOf="@id/input_layout_celular" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


